--- a/java-17/.devcontainer/devcontainer.json
+++ b/java-17/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 	"name": "Java-17",
 	"image": "mcr.microsoft.com/devcontainers/base:jammy",
 	"features": {
-		"ghcr.io/sandor-juhasz/devcontainer-features/java:latest": {
-		}
+		"ghcr.io/sandor-juhasz/devcontainer-features/utilities:latest": {},
+		"ghcr.io/sandor-juhasz/devcontainer-features/java:latest": {}
 	}
 }
