--- a/.github/workflows/prebuild.yaml
+++ b/.github/workflows/prebuild.yaml
@@ -4,7 +4,8 @@ on: # rebuild any PRs and main branch changes
   push:
     branches:
       - main
-
+permissions:
+  packages: write
 jobs:
   prebuild:
     runs-on: ubuntu-latest
